[WEBDEV-796] Fix input--group alignment on smaller screen sizes (#520)

--- a/src/stylesheets/elements/_form.scss
+++ b/src/stylesheets/elements/_form.scss
@@ -263,9 +263,10 @@ input[type="file"].js-has-focus + label {
   }
   input[type="search"],
   input[type="text"] {
-    flex-grow: 1;
+    flex: 1;
     margin-bottom: 0;
     margin-right: -1px;
+    min-width: 1em;
   }
   @include media($small) {
     input[name="postcode"] {
